feat: i18n国际化补充

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,9 @@
 {
     "WrittenInfo":"Writen is a cross-platform desktop apps of markdown editing software developed using electron, typescript and react",
-    "GitHub": "GitHub Of Written"
+    "GitHub": "GitHub Of Written",
+    "Download": "Download",
+    "Unname": "Unnamed",
+    "Edited": "Edited",
+    "Windows": "Currently, only MAC M1 and inter versions are supported, Windows version is not adapted yet, but it can be run. Please refer to the left apprentice for the running steps",
+    "Apply": "For MacOS 11, Big Sur (2020) or later"
 }
