fix: download布局调整、文案信息替换

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,6 @@
     "Download": "Download",
     "Unname": "Unnamed",
     "Edited": "Edited",
-    "Windows": "Currently, only MAC M1 and inter versions are supported, Windows version is not adapted yet, but it can be run. Please refer to the left apprentice for the running steps",
+    "Windows": "Currently, only MAC Apple and Inter versions are supported, Windows version is not adapted yet, but it can be run. Please refer to the left apprentice for the running steps",
     "Apply": "For MacOS 11, Big Sur (2020) or later"
 }
